update maintainer fields and copyright notices.  I hate GNU-style file headers...

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,8 @@
+John W. Lato            <jwlato@gmail.com>
+
+This project originated from language-c, and would not exist without
+the many authors and contributors to that library.
+
 Benedikt Huber          <benedikt.huber@gmail.com>
 Manuel M T Chakravarty  <chak@cse.unsw.edu.au>
 Duncan Coutts           <duncan@haskell.org>
