--- a/ChangeLog
+++ b/ChangeLog
@@ -1,38 +1,4 @@
-Changes since 0.3.1
-==========================================================================
-Fr April 15 2011: Alexander Bernauer <bernauer@inf.ethz.ch>
-  * Show instances (popular request) for AST types, DumpAst demo
 
-Changes 0.3 - 0.3.1
-==========================================================================
-Thu Aug 21 benedikt.huber@gmail.com
-  * add aliases for exposed parsers, in order to document them
-
-Fri Aug 15 benedikt.huber@gmail.com
-  * Remove NameMap from Data.Name. We will do this right when neccessary.
-  * Parser public API: expose parsers and the Parser Monad
-  * ParserMonad: Return updated name supply when executing parser
-  * Parser: Expose expression, statement, declaration and file parsers
-  * Data: Add newNameSupply ~ (namesStartingFrom 0)
-
-Thu Aug 14 17:13:29 CEST 2008  iavor.diatchki@gmail.com
-  * Add a utility function to create a "blank" set of cpp arguments.
-  * Make that analysis traversal monad abstract.
-  * Export the type synonym "Register" (and bump version)
-
-Wed Aug 13 12:00:57 CEST 2008  benedikt.huber@gmail.com
-  * add Data.Position: internalIdentAt
-
-
-Old Changes
-==========================================================================
-
-Mon Jun  9 23:12:46 CEST 2008  benedikt.huber@gmail.com
-  * License switched to 3-clause BSD
-  $
--  In accordance with the original authors, Language.C is now licensed as BSD-3.
-   See:
-   http://haskell.org/pipermail/c2hs/2008-June/000833.html
-   http://haskell.org/pipermail/c2hs/2008-June/000834.html
-   http://haskell.org/pipermail/c2hs/2008-June/000835.html
-
+Version 0.4.2.0
+  * initial release of language-objc
+  * This project originated as a fork of language-c-0.4.2
