--- a/AUTHORS
+++ b/AUTHORS
@@ -21,3 +21,7 @@ Special thanks for their great support, comments and suggestions to:
 Duncan Coutts           <duncan@haskell.org>
 Iavor Diatchki          <iavor.diatchki@gmail.com>
 Don Steward             <dons@galois.com>
+
+Other contributors to language-objc:
+
+Ian Duncan              <ian@iankduncan.com>
